vbnc/vbnc/tests/Errors/30106.vb
Module Main

	Sub Foo
	
		Dim arr() As String
		Dim var As String = arr(0, 0)
		
	End Sub
	
End Module